Input border fixed

--- a/style/style.css
+++ b/style/style.css
@@ -12,9 +12,9 @@ input{
     width: 100%;
     padding: 5px 0;
     padding-left: 10px;
-    border-radius: 5px;
-    border: 2px solid #f0f0f0;
+    border: none;
     box-sizing: border-box;
+    border-bottom: 1px solid #000;
 }
 button{
     background-color: #6c757d;
